Style e Home CSS

--- a/cadastro.html
+++ b/cadastro.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
 
 
+    <link rel="stylesheet" href="./styles/style.css">
     <link rel="shortcut icon" href="./assets/fav2.ico"/>
     
     <title>
