--- a/cadastro.html
+++ b/cadastro.html
@@ -9,6 +9,7 @@
 
 
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/create-point.css">
     <link rel="shortcut icon" href="./assets/fav2.ico"/>
     
     <title>
