--- a/pesquisa.html
+++ b/pesquisa.html
@@ -9,6 +9,7 @@
 
 
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/search-results.css">
     <link rel="shortcut icon" href="./assets/fav2.ico"/>
     
     <title>
