--- a/pesquisa.html
+++ b/pesquisa.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/search-results.css">
+    <link rel="stylesheet" href="./styles/responsive.css">
     <link rel="shortcut icon" href="./assets/fav2.ico"/>
     
     <title>
